made topic name text overflow hidden with ellipsis; but edit icon flows off (need to fix)

--- a/client/components/Knowledge/style.scss
+++ b/client/components/Knowledge/style.scss
@@ -8,6 +8,7 @@
     composes: row from 's/vendor/flexboxgrid.css';
     padding: 0px 15px;
     height: 100%;
+    flex-wrap: nowrap;
 }
 
 .replyList {
